refactor(kitty): update kitty configurations

--- a/.config/kitty/window.conf
+++ b/.config/kitty/window.conf
@@ -1,3 +1,4 @@
+# * command d split window border
 window_border_width 1pt
 
 remember_window_position yes
@@ -10,3 +11,6 @@ tab_bar_edge                bottom
 tab_bar_style               powerline
 tab_powerline_style         slanted
 tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
+
+window_padding_width 4
+# window_padding_height 
