--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -7,16 +7,17 @@
 ## blurb:    Soothing pastel theme for the high-spirited!
 
 
+# * changed 2026.2.5, #1e1e2e -> #11111b
 
 # The basic colors
 foreground              #cdd6f4
-background              #1e1e2e
-selection_foreground    #1e1e2e
+background              #11111b
+selection_foreground    #11111b
 selection_background    #f5e0dc
 
 # Cursor colors
 cursor                  #f5e0dc
-cursor_text_color       #1e1e2e
+cursor_text_color       #11111b
 
 # Scrollbar colors
 scrollbar_handle_color  #9399b2
@@ -41,14 +42,14 @@ active_tab_foreground   #11111b
 active_tab_background   #cba6f7
 inactive_tab_foreground #cdd6f4
 inactive_tab_background #181825
-tab_bar_background      #11111b
+tab_bar_background      #1e1e2e
 
 # Colors for marks (marked text in the terminal)
-mark1_foreground #1e1e2e
+mark1_foreground #11111b
 mark1_background #b4befe
-mark2_foreground #1e1e2e
+mark2_foreground #11111b
 mark2_background #cba6f7
-mark3_foreground #1e1e2e
+mark3_foreground #11111b
 mark3_background #74c7ec
 
 # The 16 terminal colors
